@@ -4,6 +4,13 @@
 Note: This file contains only changes in the 'default' branch.
 
 
+2018-03-19
+
+  - Fixed #239, HELP command should tolerate semicolons and whitespace.
+    (Also, don't print shell commands in test (remove docstrings), we want the
+    name of the tests to list, not the input.)
+
+
 2018-03-13
 
   - Removed SIMPLE booking method and all traces of it, including the
